styles.css
body {
   position: relative;
   background-image: url(#);
   background-repeat:no-repeat;
   background-size:100% 100vh;
   background-color: #F5F5F5;
}


.navbar{
   margin-bottom: 40px;
}

hr{
   height:1px;
   border:none;
   color:#333;
   background-color:#333;
   margin-bottom: 0px;
}


#about-text{
   margin-left: -140px;
}

#Luigi{
   margin-bottom:30px;
}

.project-list{
   list-style-type:none;
}

.project{
   padding-bottom: 20px;
   border-bottom-color: black;
   border-bottom-style: solid;
   border-bottom-width: 1px;
   margin-bottom: 40px;
}
.project-name{
   
}

.project-description{
   
}


.footer{
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
   background-color: #343a40;
   color: white;
   text-align: right;
   padding: 10px;
}

.footer-item{
   font-size:20px;
   margin-left:10px;
   margin-right:10px;
   color: white;
}

.footer-item:hover{
   color: gray;
}



/*#about-partition{*/
/*   padding-bottom: 20px;*/
/*   border-bottom-style: solid; */
/*   border-width: 3px;*/
/*   border-bottom-color: black;*/
/*}*/

